// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`dynamic-import.js format 1`] = `
====================================options=====================================
parsers: ["oxc", "yuku", "typescript", "hermes"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import("./foo.json", { assert: { type: "json" } });

=====================================output=====================================
import("./foo.json", { assert: { type: "json" } });

================================================================================
`;

exports[`empty.js format 1`] = `
====================================options=====================================
parsers: ["oxc", "yuku", "typescript", "hermes"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export * as foo from "foo.json"
export * as bar from "bar.json" assert { }
export * as baz from "baz.json" assert { /* comment */ }

import * as foo from "foo.json"
import * as bar from "bar.json" assert { }
import * as baz from "baz.json" assert { /* comment */ }
=====================================output=====================================
export * as foo from "foo.json";
export * as bar from "bar.json" assert {};
export * as baz from "baz.json" /* comment */ assert {};

import * as foo from "foo.json";
import * as bar from "bar.json" assert {};
import * as baz from "baz.json" /* comment */ assert {};

================================================================================
`;

exports[`empty.js format[babel-ts] 1`] = `
"Missing semicolon. (2:32)
  1 | export * as foo from "foo.json"
> 2 | export * as bar from "bar.json" assert { }
    |                                ^
  3 | export * as baz from "baz.json" assert { /* comment */ }
  4 |
  5 | import * as foo from "foo.json"
Cause: Missing semicolon. (2:31)"
`;

exports[`empty.js format[hermes] 1`] = `
"';' expected (2:33)
  1 | export * as foo from "foo.json"
> 2 | export * as bar from "bar.json" assert { }
    |                                 ^
  3 | export * as baz from "baz.json" assert { /* comment */ }
  4 |
  5 | import * as foo from "foo.json"
Cause: ';' expected (2:32)
export * as bar from "bar.json" assert { }
                                ^"
`;

exports[`keyword-detect.js format 1`] = `
====================================options=====================================
parsers: ["oxc", "yuku", "typescript", "hermes"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import "./test.json" /* with */ assert /* with */  { type: "json" }
import {default as b} from "./test.json" /* with */ assert /* with */  { type: "json" }

export {default as e} from "./test.json" /* with */ assert /* with */  { type: "json" }

export * from "./test.json" /* with */ assert /* with */  { type: "json" }

=====================================output=====================================
import "./test.json" /* with */ /* with */ assert { type: "json" };
import { default as b } from "./test.json" /* with */ /* with */ assert { type: "json" };

export { default as e } from "./test.json" /* with */ /* with */ assert { type: "json" };

export * from "./test.json" /* with */ /* with */ assert { type: "json" };

================================================================================
`;

exports[`keyword-detect.js format[babel-ts] 1`] = `
"Missing semicolon. (1:21)
> 1 | import "./test.json" /* with */ assert /* with */  { type: "json" }
    |                     ^
  2 | import {default as b} from "./test.json" /* with */ assert /* with */  { type: "json" }
  3 |
  4 | export {default as e} from "./test.json" /* with */ assert /* with */  { type: "json" }
Cause: Missing semicolon. (1:20)"
`;

exports[`keyword-detect.js format[hermes] 1`] = `
"';' expected (1:33)
> 1 | import "./test.json" /* with */ assert /* with */  { type: "json" }
    |                                 ^
  2 | import {default as b} from "./test.json" /* with */ assert /* with */  { type: "json" }
  3 |
  4 | export {default as e} from "./test.json" /* with */ assert /* with */  { type: "json" }
Cause: ';' expected (1:32)
import "./test.json" /* with */ assert /* with */  { type: "json" }
                                ^"
`;

exports[`multi-types.js format 1`] = `
====================================options=====================================
parsers: ["oxc", "yuku", "typescript", "hermes"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import json from "./foo.json" assert { type: "json", type: "bar" };

=====================================output=====================================
import json from "./foo.json" assert { type: "json", type: "bar" };

================================================================================
`;

exports[`multi-types.js format[babel-ts] 1`] = `
"Unexpected token (1:58)
> 1 | import json from "./foo.json" assert { type: "json", type: "bar" };
    |                                                          ^
  2 |
Cause: Unexpected token (1:57)"
`;

exports[`multi-types.js format[hermes] 1`] = `
"';' expected (1:31)
> 1 | import json from "./foo.json" assert { type: "json", type: "bar" };
    |                               ^
  2 |
Cause: ';' expected (1:30)
import json from "./foo.json" assert { type: "json", type: "bar" };
                              ^"
`;

exports[`non-type.js format 1`] = `
====================================options=====================================
parsers: ["oxc", "yuku", "typescript", "hermes"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import foo from "foo.json" assert { lazy: "true" };

=====================================output=====================================
import foo from "foo.json" assert { lazy: "true" };

================================================================================
`;

exports[`non-type.js format[babel-ts] 1`] = `
"Missing semicolon. (1:27)
> 1 | import foo from "foo.json" assert { lazy: "true" };
    |                           ^
  2 |
Cause: Missing semicolon. (1:26)"
`;

exports[`non-type.js format[hermes] 1`] = `
"';' expected (1:28)
> 1 | import foo from "foo.json" assert { lazy: "true" };
    |                            ^
  2 |
Cause: ';' expected (1:27)
import foo from "foo.json" assert { lazy: "true" };
                           ^"
`;

exports[`not-import-assertions.js format 1`] = `
====================================options=====================================
parsers: ["oxc", "yuku", "typescript", "hermes"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import "x"
assert ({type: 'json'});

=====================================output=====================================
import "x";
assert({ type: "json" });

================================================================================
`;

exports[`re-export.js format 1`] = `
====================================options=====================================
parsers: ["oxc", "yuku", "typescript", "hermes"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export { default as foo2 } from "foo.json" assert { type: "json" };
export * from "foo.json" assert { type: "json" };
export * as foo3 from "foo.json" assert { type: "json" };

=====================================output=====================================
export { default as foo2 } from "foo.json" assert { type: "json" };
export * from "foo.json" assert { type: "json" };
export * as foo3 from "foo.json" assert { type: "json" };

================================================================================
`;

exports[`re-export.js format[babel-ts] 1`] = `
"Missing semicolon. (1:43)
> 1 | export { default as foo2 } from "foo.json" assert { type: "json" };
    |                                           ^
  2 | export * from "foo.json" assert { type: "json" };
  3 | export * as foo3 from "foo.json" assert { type: "json" };
  4 |
Cause: Missing semicolon. (1:42)"
`;

exports[`re-export.js format[hermes] 1`] = `
"';' expected (1:44)
> 1 | export { default as foo2 } from "foo.json" assert { type: "json" };
    |                                            ^
  2 | export * from "foo.json" assert { type: "json" };
  3 | export * as foo3 from "foo.json" assert { type: "json" };
  4 |
Cause: ';' expected (1:43)
export { default as foo2 } from "foo.json" assert { type: "json" };
                                           ^"
`;

exports[`static-import.js format 1`] = `
====================================options=====================================
parsers: ["oxc", "yuku", "typescript", "hermes"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import json from "./foo.json" assert { type: "json" };

=====================================output=====================================
import json from "./foo.json" assert { type: "json" };

================================================================================
`;

exports[`static-import.js format[babel-ts] 1`] = `
"Missing semicolon. (1:30)
> 1 | import json from "./foo.json" assert { type: "json" };
    |                              ^
  2 |
Cause: Missing semicolon. (1:29)"
`;

exports[`static-import.js format[hermes] 1`] = `
"';' expected (1:31)
> 1 | import json from "./foo.json" assert { type: "json" };
    |                               ^
  2 |
Cause: ';' expected (1:30)
import json from "./foo.json" assert { type: "json" };
                              ^"
`;

exports[`without-from.js format 1`] = `
====================================options=====================================
parsers: ["oxc", "yuku", "typescript", "hermes"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import "foo" assert { type: "json" }

=====================================output=====================================
import "foo" assert { type: "json" };

================================================================================
`;

exports[`without-from.js format[babel-ts] 1`] = `
"Missing semicolon. (1:13)
> 1 | import "foo" assert { type: "json" }
    |             ^
  2 |
Cause: Missing semicolon. (1:12)"
`;

exports[`without-from.js format[hermes] 1`] = `
"';' expected (1:14)
> 1 | import "foo" assert { type: "json" }
    |              ^
  2 |
Cause: ';' expected (1:13)
import "foo" assert { type: "json" }
             ^"
`;
